--- a/PlutoPoint Installer.csproj
+++ b/PlutoPoint Installer.csproj
@@ -110,6 +110,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\icons\nanaZip.png" />
+    <None Include="Resources\icons\microsoftOffice2007.png" />
     <None Include="Resources\icons\mozillaThunderbird.png" />
     <None Include="Resources\icons\steam.png" />
     <None Include="Resources\icons\discord.png" />
